--- a/TIkA/padyam/madhurA-vijayam/AnglAnuvAdaH/2.md
+++ b/TIkA/padyam/madhurA-vijayam/AnglAnuvAdaH/2.md
@@ -17,10 +17,7 @@ grazing, she, in her mental flights, was on the tops of the Malāya mountain inh
 10. The auspicious line of hair that was on her abdomen looked like a black serpent on guard in order to protect the infant within.  
 11. Her breasts, with black nipples, surpassed in their attractiveness the çakravāka couple with a bit of blue utpala flower in their beaks.  
 12. The lord of earth regarded her being in an interesting condition, as if she were a rain-cloud full of water within, a pearl oyster with pearl inside and night time foreshadowing the rise of the moon.  
-13. The king who was as prosperous as Indra and who was ever bent on the amelioration of his subjects, celebrated the ceremony of pumsavana as ordered by  
-14
-M ADHURĀ VIJAY A M
-his preceptor, at the appointed time, on a scale befitting his royal rank.
+13. The king who was as prosperous as Indra and who was ever bent on the amelioration of his subjects, celebrated the ceremony of pumsavana as ordered by his preceptor, at the appointed time, on a scale befitting his royal rank.
 
 Shlokas 14 to 42: The birth of Kampaņa, the hero of the poem. The birth of the other two sons of Bukka, Kampaņa and Sangama, is also mentioned.  
 14. Then on an auspicious day, at the hour pro nounced most auspicious by astrologers, the queen presented her lord with a boy, as Goddess Pārvati bore to Śiva the child Subrahmanya.  
@@ -38,22 +35,16 @@ the hands of the royal baby who would soon grow up to be a daring hunter.
 TOO
 24. Duly bathed and clad in white silk, the king: after doling out immense riches as gifts to Brāmins, entered the lying-in room with a glad heart to see the face of his son.  
 25. He saw the child lying on the lap of his slim featured queen like a swan youngling on the wavy-bed of the autumnal river.  
-26 to 30. Rays of light, whitish as camphor dust, played on the child's form which subdued the lustre of the lamps burning in the lying-in-chamber. With his two reddish hands closed, the child looked as if already practising the art of holding within his grasp the god dess of prosperity of his enemies. His two gracefully shaped feet bore auspicious marks indicative of conch,
-as
-1
-16
-MADHURAVIJ A Y AM disc, umbrella, lotus, banner, and fish. His tiny fingers, reddish and soft as tender foliage, were also beautiful to look at. He bore the hairy sign of Śrīvatsa on his breast which suggested that he was an avatāra of Viṣnu, and, that unbroken prosperity would mark his life. His forehead was adorned with a circle of hair between the eye-brows. His eyes were large like the petals of blooming lotus. His nose was lofty; and a sweet smile played on his red lips. Altogether, the child's face was surpassingly beautiful.
-31. Tears of joy, for a while, acted as a check on the steadfast look of his eyes that feasted on the cherubic form of the child.  
-32. The king embraced the child with his eyes; and the excessive emotion in his mind burst out as manifest by horripulation.  
-33. On an auspicious day, the jāta karman rites of the child were performed as directed by the priest, and the child grew in splendour like the god of fire that witnesses those rites.  
-34. The king who always looked ahead named his child Kampana, as he clearly foresaw in his mind that, in proper time, the latter would become a matchless (warrior, and was sure to make his enemies in the field of battle quake with fear.  
-35. Just as the sacrificer tends the fire with ghee offerings, and just as the cloud sustains the corn with rains, so too, the king had his child brought up by trustworthy nurses.  
-36. He was overjoyed to hear the lisping words and to look at the tottering gaits of his child, who had  
-MADHURAVIJAY AM
-17 his lessons on talking and walking from his foster mother.
-37. Like a swan that ever loves the touch of budding lotuses, the king was never satisfied with kis sing the fragrant mouth of his child with no teeth yet perceptible in it.  
-38. The pleasurable feeling which the king had while embracing his cherub boy, was not to be matched by the contact of camphor, pearl, sandal-paste or moon beams.  
-39. The king and the queen felt themselves bathed in an ocean of nectar as they enjoyed looking at their child crawling on his knees on the floor of the palace, with the small bells in his ornaments tinkling.  
-40. Then, in course of time, the queen bore to the king two other sons called Kampana and Sangama who were like pārijāta and çintāmaại that sprang from the milky ocean.  
-41. The prince (viz, Kampana), along with his two brothers, began to grow, day by day ; and people were in ecstasies when they looked at him as at the (waxing) moon.  
-42. The king, with his three children, shone like Śiva with his three eyes, the moon, the sun and the fire; or like statesmanship, with its three unfailing aspects, Power, Daring and Counsel; or like life with its three ends, Virtue, Wealth and Enjoyment.  
+26. 26 to 30. Rays of light, whitish as camphor dust, played on the child's form which subdued the lustre of the lamps burning in the lying-in-chamber. With his two reddish hands closed, the child looked as if already practising the art of holding within his grasp the god dess of prosperity of his enemies. His two gracefully shaped feet bore auspicious marks indicative of conch, disc, umbrella, lotus, banner, and fish. His tiny fingers, reddish and soft as tender foliage, were also beautiful to look at. He bore the hairy sign of Śrīvatsa on his breast which suggested that he was an avatāra of Viṣnu, and, that unbroken prosperity would mark his life. His forehead was adorned with a circle of hair between the eye-brows. His eyes were large like the petals of blooming lotus. His nose was lofty; and a sweet smile played on his red lips. Altogether, the child's face was surpassingly beautiful.
+27. Tears of joy, for a while, acted as a check on the steadfast look of his eyes that feasted on the cherubic form of the child.  
+28. The king embraced the child with his eyes; and the excessive emotion in his mind burst out as manifest by horripulation.  
+29. On an auspicious day, the jāta karman rites of the child were performed as directed by the priest, and the child grew in splendour like the god of fire that witnesses those rites.  
+30. The king who always looked ahead named his child Kampana, as he clearly foresaw in his mind that, in proper time, the latter would become a matchless (warrior, and was sure to make his enemies in the field of battle quake with fear.  
+31. Just as the sacrificer tends the fire with ghee offerings, and just as the cloud sustains the corn with rains, so too, the king had his child brought up by trustworthy nurses.  
+32. He was overjoyed to hear the lisping words and to look at the tottering gaits of his child, who had his lessons on talking and walking from his foster mother.
+33. Like a swan that ever loves the touch of budding lotuses, the king was never satisfied with kis sing the fragrant mouth of his child with no teeth yet perceptible in it.  
+34. The pleasurable feeling which the king had while embracing his cherub boy, was not to be matched by the contact of camphor, pearl, sandal-paste or moon beams.  
+35. The king and the queen felt themselves bathed in an ocean of nectar as they enjoyed looking at their child crawling on his knees on the floor of the palace, with the small bells in his ornaments tinkling.  
+36. Then, in course of time, the queen bore to the king two other sons called Kampana and Sangama who were like pārijāta and çintāmaại that sprang from the milky ocean.  
+37. The prince (viz, Kampana), along with his two brothers, began to grow, day by day ; and people were in ecstasies when they looked at him as at the (waxing) moon.  
+38. The king, with his three children, shone like Śiva with his three eyes, the moon, the sun and the fire; or like statesmanship, with its three unfailing aspects, Power, Daring and Counsel; or like life with its three ends, Virtue, Wealth and Enjoyment.  
