--- a/TIkA/padyam/madhurA-vijayam/AnglAnuvAdaH/7.md
+++ b/TIkA/padyam/madhurA-vijayam/AnglAnuvAdaH/7.md
@@ -30,7 +30,9 @@ eve
 20. The same twilight raised the momentary vision of a red doublet worn by the region of Varuņa; one also fancied that it should have got its characteristic colour by coming into contact with the dust raised by the hoofs of the sun's horses as they trod on the red layers of the western mountains.
 21. Red clouds travelled in the evening sky, and their colour was imitative of the hue of the red dye adorning the face of the Damsel, Night, who was about to set foot on the horizon.  
 22. The reddish hues of twilight, as of tender leaves, began to show themselves in the western horizon like coral reefs revealed by the western ocean in the agitation caused by the rapid fall of the sun into its depth.  
-23 to 25. Then darkness began to set in. now obscuring trees, now the sky, now the regions; and it gave rise to various fancies such as: that they were tender leaves of tamāla with which the regions deco rated their ears; or that they were musk-paste draw ings on the face of the lady called Night; or that they were smokes rising from the quenching of the sun's heated surface; or that they were black bees disguised as darkness filling the regions after leaving the closing lotuses, or the black waters of the Jumna rising up, tall as trees, when disturbed by Sri Krsna.
+23. 23 to 25. Then darkness began to set in. now obscuring trees, now the sky, now the regions; and it gave rise to various fancies such as: that they were tender leaves of tamāla with which the regions deco rated their ears; or that they were musk-paste draw ings on the face of the lady called Night; or that they were smokes rising from the quenching of the sun's heated surface; or that they were black bees disguised as darkness filling the regions after leaving the closing lotuses, or the black waters of the Jumna rising up, tall as trees, when disturbed by Sri Krsna.
+24. See previous shloka 23.
+25. See previous shloka 23.
 26. People's eyes suddenly lost their power (of seeing). It seemed as if the burning lamp of the sun was put out, and from the lamp-pot of sky, lamp-black was being scattered all round.  
 27. The stars began to show themselves in the dark sky, and people fancied that God Śiva was letting go his elephant-skin clothing dotted with drops of blood (after his dance was over).  
 
@@ -42,7 +44,7 @@ eve
 33. Lady Darkness decking her plait of hair with flowers of stars waited for a short time for her lover, the moon, smiling, as it were, with the blossoms of the white lily.  
 34. Then a few rays of the moon, like glittering ocean-waves, were to be noticed in the eastern horizon.  
 35. The eastern quarter, hiding the moon about to rise, with her pale appearance, looked like a woman big with child of whom she was about to be delivered.  
-57 36. A portion of the reddish orb of the moon appeared on the eastern region like the mark on the forehead of a beautiful maiden whom that region (of Indra) might be imagined to incarnate.
+36. A portion of the reddish orb of the moon appeared on the eastern region like the mark on the forehead of a beautiful maiden whom that region (of Indra) might be imagined to incarnate.
 37. The reddish globe of the rising moon looked like the victorious umbrella of Cupid made of red sandhyaka flowers.  
 38. Just as a new king who after the departure of the powerful personality of an old monarch ministers consolation to the world by his gentle levies, so also, the moon, after the splenderous sun had disappeared, pleased the world with his cool pleasant rays.  
 39. Then the dutiful king Kampaņa duly per formed the worship of sandhya, and afterwards, addressed his queen who was near and whom the world was delighted to call Gangā; thus:  
@@ -56,23 +58,21 @@ eve
 47. The moon embraces with his hands of rays the damsel of Eastern Region, and at the same time, also touches another called Kumudvati (bed of night lotuses). This shows, that lustful men ought not to be trusted.  
 48. Though the moon touches incessantly with his rays, as with hands, the lotus clusters, the latter do not look up to him nor return his attentions. That proves how virtuous women are firm in their vow of chastity.  
 49. The sun enters the moon every new-moon, and so, the latter is also endowed with the heating qua lity of the former. And this, he exhibits in the case of lovers in separation.  
-50. The bee-black spot that is observed in the centre of the moon's globe is not the sign of deer as some suppose. But what it evidences is the applica tion of lamp-black which he had while being used as one of the wheels of Rudra's chariot at the time of Tri pura destruction.
-* In Sanskrit, unlike in English, 'moon' is masculine.  
+50. The bee-black spot that is observed in the centre of the moon's globe is not the sign of deer as some suppose. But what it evidences is the applica tion of lamp-black which he had while being used as one of the wheels of Rudra's chariot at the time of Tri pura destruction. * In Sanskrit, unlike in English, 'moon' is masculine.  
 51. Or, you may even consider that spot blue as indra-nāla gem, as night herself who is his beloved lying there is love's repose.”  
+
 Thus ends the seventh canto of Virakamparāya çaritam, called Madhurāvijayam composed by Gangā Dēvi.
 
 
 The condition of the Tamil country after the Muslim Occupation.
 ... ... Verily has become the abode of tigers, true to its name. ... (incomplete).
-Wa
+
 In Srirangam the lord of serpents is seen warding off the tumbling debris of brick with his hood lest their fall disturb the sleep of yoga in which Hari is wrapped up there.
 When I look at the state of the temples of other gods also, my distress knows no bounds. The foldings of their door are eaten up by wood worms. The arches over their inner sanctuaries are rent with wild growths of vegetation.
 Those temples which were once resonant with the sounds of mridanga drums, are now echoing the fearful howls of jackals.
 The river Kāvēri, uncurbed by proper bunds or dams, has become deflected very much from her time-honoured course, and flows in all sorts of wrong directions as if imitating the Turuskas in their actions.
 The Brāhmin streets, where once the sacrifi cial smoke was ever seen rising, and the chanting of Vēdās always greeted the ears, now exhude the musty odour of meat, and resound with the lion-roars of drunken Turuṣkas.
-I very much lament for what has happened to the groves in Madhura. The cocoanut trees have all
-M A DHURAVIJAY A M
-61 been cut and in their place are to be seen rows of iron spikes with human skulls dangling at the points.
+I very much lament for what has happened to the groves in Madhura. The cocoanut trees have all been cut and in their place are to be seen rows of iron spikes with human skulls dangling at the points.
 In the highways which were once charming with the sounds of anklets of beautiful women, are now heard ear-piercing noises of Brāhmins being dragged, bound in iron-fetters.
 Webs worn by spiders have since taken the place of silk veils with which the dolls adorning the outer-towers of the city were once covered. Royal court-yards which were once cool with the spraying of ice-cold sandal, now distress me, wet as they are with the tears of Brāhmins taken as prisoners.
 Screechings of owls in worri-out pleasure groves do not afflict me so much as the voice of parrots taught to speak Persian in the houses of Yavanas (Turuskas).
