--- a/TIkA/padyam/madhurA-vijayam/AnglAnuvAdaH/8.md
+++ b/TIkA/padyam/madhurA-vijayam/AnglAnuvAdaH/8.md
@@ -10,19 +10,13 @@ son
 3. No sooner did a horseman begin to return after having cut with his sword the frontal globe of an elephant than that elephant was seen seizing his horse between his legs and squeezing him.  
 4. The blood flowing from the wounded frontal globes of elephants was seen, being drunk through their trunks by some night-prowling demons in great glee, spitting the pearls that also came with the blood stream.  
 5. Birds of prey with a view to taste the inner flesh entered into the body of a dead elephant making it quiver; jackals that mistook it for sign of life fled away, though they very much loved to feast on the body.  
-6. Just as the heads cut by wheels were about to fall down, they were snatched away quite afresh with  
-1
-66
-MADHURAVIJAY À M
-life by Rākshasa women who desired to wear them as wreaths on their ears.
+6. Just as the heads cut by wheels were about to fall down, they were snatched away quite afresh with life by Rākshasa women who desired to wear them as wreaths on their ears.
 7. A certain elephant having seized by the foot, and thrown up a warrior with his trunk, wanted to catch him again, as he fell, with his pair of tusks.  
 8. A certain brave warrior thrown up by his adversary's elephant alighted on his back with his sword with which he despatched the enemy rider, and installed himself in his place.  
 9. A certain warrior, after having been killed by the rain of arrows of his angry adversary, became a god and from his place in swarga rained flowers upon the latter praising his valour with genuine delight.  
 10. A certain warrior was struck with a (double edged) lance by his opposing foe, and by embracing the latter with the same lance sticking in his body, wounded him. This act evoked great admiration. Who is there that is not moved by real exhibition of daring qualities?  
 11. Two warriors, meeting in single combat, cut each other's head with their swords after a long fight; leaving their bodies there, they went up together at once to celestial regions as close friends.  
 12. Some royal warriors, like lions, wandered in the field of battle, and tore the heads of their adver saries with their sharp nails as if the latter were oppos ing elephants.  
-MADHURĂVIJAY A M
-67
 13. With one blow of his sword he (king) split in two both the elephants and their riders with their coat of mail. Their bodies, lying mingled, gave but a slender clue for distinguishing the ranks of elephants from those of foot-soldiers.  
 14. The king, by smiting the elephants on their globes, produced many a river of blood scattering the pearls on their head like sands.  
 ENT
@@ -50,9 +44,7 @@ ing arrows on each other with their bows bent up to their ears.
 29. The scratches caused by the Yavana king's arrow on the person of king Kampa shone like the nail marks of the Goddess of Victory that was so passionate to enjoy her privacy.  
 30. The crow banner of the Yavana king which looked like the typification of the crown of Kali age was destroyed by king Kampa, and with that the former's hope of victory also.  
 31. The king, with his arrow, cut the bow-string of the Turuṣka king who was, in his fury, raining arrows at the former. It was as if the knife was laid on the auspicious chord round the neck of the Rājya lakṣmi (kingly prosperity) of the Turuskas.  
-32. The Turuṣka hero blazing with anger, then threw away his bow, and hastily drew out his terrible  
-70
-1 MADHURAVIJAY AM sword that was hanging on the side of his horse's saddle.
+32. The Turuṣka hero blazing with anger, then threw away his bow, and hastily drew out his terrible sword that was hanging on the side of his horse's saddle.
 33. Determined to make an end of the Yavana king, king Kampa also armed himself with that sword which Agastya had sent him, and which looked as terri ble as Yama himself.  
 34. That sword, grey-coloured like poisoned fumes as it was being waved by the hand of king Kampa, looked like a serpent about to drink the life breath from the Yavana's body.  
 35. Seated on his agile horse, king Kampa, who was the glory of the Karnāta race, avoiding the sword blow aimed by the Yavana, cut off in an instant the head of the latter.  
