--- a/TIkA/padyam/madhurA-vijayam/AnglAnuvAdaH/4.md
+++ b/TIkA/padyam/madhurA-vijayam/AnglAnuvAdaH/4.md
@@ -4,17 +4,14 @@ title = "4"
 +++
 
 Shlokas 1 to 16: Preparations for the march on the Sam buvarāya territory.  
-1 & 2. When the divine sun, the sustainer of lotuses, and the unequalled lamp of universe, rose the next day, the prince woke up from his sleep, and after duly performing the morning rites of worship, ordered his generals to get the army ready for marching.
+1. When the divine sun, the sustainer of lotuses, and the unequalled lamp of universe, rose the next day, the prince woke up from his sleep, and after duly performing the morning rites of worship, ordered his generals to get the army ready for marching.
+2. See previous shloka.
 3. Then, like the noise of the ocean, churned with the mountain of Mandhara, the sound of war-drums beaten by drum-sticks arose at the beginning of the march.  
 4. The sound grew louder and louder, and filled the skies as if it emanated from Candisa's damaru (drum) beaten at the time of the Great Deluge.  
 5. It raised echoes from the caverns in the moun tains as if to scare the fear-ridden enemies who might otherwise take shelter in them.  
 6. As the uproar entered the bowels of earth, Sēsa closed his eyes (which were also his ears), and he became both blind and deaf by a single act.  
 7. The army at once got ready with each of its units, viz., elephants, horses and foot soldiers, suitably covered and dressed; elephants with carpets on their backs, horses fully caparisoned and men protected in their mailed coats.  
 8. There mustered hundreds of formidable war elephants with ichor streaming forth from their exten sive temples.  
-Caverns
-MADHURAVIJAY AM
-27
-A
 9. Horses with foaming mouths, and swift as wind, were seen bounding like waves in the army-ocean.  
 10. There gathered in no time, hosts of footmen from different countries, armed with swords, daggers, lances and bows.  
 11. Wearing suitable ornaments, kings renowned for the might of their arm, waited near the outer gate awaiting the arrival of their overlord (Kampaņa).  
@@ -29,25 +26,21 @@ Slökis 17 to 35: Prince Kampaņa starts on the campaign. He is accompanied by t
 18. His throbbing right hand foretold the auspi cious event of the forthcoming embrace by the Goddess of Valour, before everybody else.  
 · 19. Brāhmins chanting the Atharva Vēda, aug mented the chances of his victory with their (hearty) blessings, just as the sacrificial fire is made to glow by oblations sanctified by hymns.
 was
-20. The king now came out of his palace and had a good look at his tall agile horse saddled in readiness near the outer gate.  
-21. Like an ally of Garuda, like the next of kin of the mind, and like a friend of Vāvu. the agile animal looked like Speed itself in its aggregate.  
-22. As if the horse felt that the space of the earth was inadequate for the demonstration of his great speed which was faster than even that of the mind, he seemed extending it by constantly beating with his hoofs.  
-23. Excelling the horse of Indra in speed, he appeared to be attacking his own image reflected in the crystal walls (which he was facing).  
-24. With neigh attended with white foam, he seemed to mock at Hanūmān who took great pride in having merely crossed the saltish ocean.  
-M A DHURĀVIJAY A M
-29
-25. With the bit in his mouth looking like a serpent, and with the wing-like cover (on his back) sparkling with the colour of tender foliage, he seemed to imitate Garuda even in his bodily form.  
-26. The wind, blowing from the end of his waving tail which attended on him, was like a disciple taking secret.lessons in speed.  
-27. By raising his head up, and letting it down again, frequently, to keep his swiftness in bounds, he appeared to be offering salutations to the Goddess of Victory standing in front of him.  
-28. With the heaps of dust raised by his hoofs, the regions of the sky were rendered like floor; and this served to give the lie direct to the claims of the sun's horses that they trod on airy tract.  
-29. The king mounted the horse, the personifica tion of strength, and (in his elation) felt as if the entire kingdom of the earth had already passed into his hands.  
-30. With numberless troops pouring in from all directions, the king, with his view unconcealed, crossed the outer gate.  
-31. With crowns on their bent heads, with their hands folded (in reverence), the monarchs of earth saluted him, as he emerged, seated on the back of his horse.  
-32. With shouts of joy on seeing him, the Cola, Kērala and Pāndya monarchs assumed the role of staff bearers, and chose to walk in front of him.  
-30
-MADHURAVIJAY AM
-33. Like a row of clouds raining drops of water on a mountain, the respectable matrons of the town, showered the customary parched grain on him.  
-34. As he marched in state, king Kampaņa caused a quiver in the hearts of his rivals, and turned to the direction of the quarter which had the Malāya moun tains for its boundary.  
+19. The king now came out of his palace and had a good look at his tall agile horse saddled in readiness near the outer gate.  
+20. Like an ally of Garuda, like the next of kin of the mind, and like a friend of Vāvu. the agile animal looked like Speed itself in its aggregate.  
+21. As if the horse felt that the space of the earth was inadequate for the demonstration of his great speed which was faster than even that of the mind, he seemed extending it by constantly beating with his hoofs.  
+22. Excelling the horse of Indra in speed, he appeared to be attacking his own image reflected in the crystal walls (which he was facing).  
+23. With neigh attended with white foam, he seemed to mock at Hanūmān who took great pride in having merely crossed the saltish ocean.  
+24. With the bit in his mouth looking like a serpent, and with the wing-like cover (on his back) sparkling with the colour of tender foliage, he seemed to imitate Garuda even in his bodily form.  
+25. The wind, blowing from the end of his waving tail which attended on him, was like a disciple taking secret.lessons in speed.  
+26. By raising his head up, and letting it down again, frequently, to keep his swiftness in bounds, he appeared to be offering salutations to the Goddess of Victory standing in front of him.  
+27. With the heaps of dust raised by his hoofs, the regions of the sky were rendered like floor; and this served to give the lie direct to the claims of the sun's horses that they trod on airy tract.  
+28. The king mounted the horse, the personifica tion of strength, and (in his elation) felt as if the entire kingdom of the earth had already passed into his hands.  
+29. With numberless troops pouring in from all directions, the king, with his view unconcealed, crossed the outer gate.  
+30. With crowns on their bent heads, with their hands folded (in reverence), the monarchs of earth saluted him, as he emerged, seated on the back of his horse.  
+31. With shouts of joy on seeing him, the Cola, Kērala and Pāndya monarchs assumed the role of staff bearers, and chose to walk in front of him.  
+32. Like a row of clouds raining drops of water on a mountain, the respectable matrons of the town, showered the customary parched grain on him.  
+33. As he marched in state, king Kampaņa caused a quiver in the hearts of his rivals, and turned to the direction of the quarter which had the Malāya moun tains for its boundary.  
 
 Shlokas 35 to 46: The orderly march of the Karnāta forces.  
 35. Leading such a huge army, the great hero looked like the eastern wind dragging behind it a string of heavy clouds.  
@@ -77,10 +70,7 @@ Shlokas 51 to 66: The siege of Padaivīdu the stronghold of the Sambuvarāyās. 
 52. The arrayed forces of both the Karnāta and the Tamil kings attacked each other, like two oceans brought against each other by stormy winds at the time of the Great Deluge.  
 53. The fight began to rage, foot-soldiers falling on foot-soldiers elephant-herds attacking elephant herds, troops of horses colliding with troops of horses  
 54. Unable to bear the lion-like roars emanating from warriors on both sides, the elephants of the quarters, with their trumpeting completely silenced, almost lost their consciousness.  
-55. Sparks generated in large numbers by the clash of the weapons of the warriors on either side bore  
-MADHURAVIJAY AM
-33
-a close likeness to a collection of glow-worms in the darkness of the dust.
+55. Sparks generated in large numbers by the clash of the weapons of the warriors on either side bore a close likeness to a collection of glow-worms in the darkness of the dust.
 56. Even like the fancied side-glances of the amourous Goddess of fight, the sharp-pointed arrows let fly against one another by bow-men fell to the ground.  
 57. The blood-stained sword-blades waving in the hands of heroic warriors appeared like the lolling tongue of Yama eager to make a meal of them.  
 58. In the countless rivers of blood which began to flow on all sides, the faces of soldiers cut off by the bhalla arrow looked like lotuses.  
@@ -88,10 +78,7 @@ a close likeness to a collection of glow-worms in the darkness of the dust.
 60. The blood flowing from human trunks was very much liked by the Rākṣasis who deftly seated themselves on the trunks of elephants as if on tops of places.  
 61. Brave fighters sent to (everlasting) sleep by enemy arrows on the protrusion of their elephants, soon woke up on the pot-like breasts of divine damsels.  
 62. Then the army of the Tamil king routed by the mighty forces of Kampaņa took to flight.  
-63. Some men fleeing in great disorder let fall their weapons in great terror and swore they would never fight again.  
-PT
-34
-MADHURAVIJAY AM
+63. Some men fleeing in great disorder let fall their weapons in great terror and swore they would never fight again.
 64. Others, feigning death, dropped down; but fearing the presence of jackals, they at once rose up and started running pell-mell, affording no small mirth to the Karnāta forces.  
 TO
 65. Yet others, mistaking a mirage for water (river) made futile attempts to cross it with a boat improvised out of the shields which they had forgotten to abandon (in their flight).  
@@ -102,19 +89,16 @@ Shlokas 67 to 83: The batlte on Rājagambīrānmalai. The defeat and destruction
 67. King Kampaņa, then converted the Tamil king's town into an encampment for his own forces, and from there began to lay seige to the hill fortress named Rājagambhira (Rājagambirammalai) in which the enemy had sought asylum.  
 68. The sound of his war-drums raised echoes from every cave of the hill and it looked as if the hill itself had begun to yell out in fright.  
 69. With flags flying in the direction of high winds, the hill (fort) gave the impression that it was greeting king (Kampaņa) and welcoming him with its arms (the flags) to come to its top.  
-70. Again, fierce fighting commenced between the two sides, and the weapons falling down and shooting up, lit up both earth and sky by their resplendance.  
-MADHURAVIJAY AM
-35
+70. Again, fierce fighting commenced between the two sides, and the weapons falling down and shooting up, lit up both earth and sky by their resplendance. 
 71. Heads severed by arrows resembled palmyra fruits as they fell down from the ramparts and caused an illusion of balls belonging to the Deity of War (for playing with).  
 72. Like messengers (tax-collectors) sent by the stronghold itself claiming the tolls for the entry (of the Karnāta troops) the stones let down from catapults fell just in front of the king.  
 c
 73. The hill, with the houses lit up by the fire from the missiles of bow-men, looked like holding lamps in readiness for the happy ceremony of hārati to mark the auspicious victory of the king.  
 74. The ascent of the hill was accomplished by heroic men by means of rows of lances planted as ladders and climbing up to the tops of sāla trees.  
-75&76. With all means (and chances) of (escape) coming out completely blocked, the stronghold was subjected to such great distress that the embryos of women, big with children, slipped out at the very sight of the fierce troops jumping in, and people immersed in the river of blood of the slain prayed for their lives.
+75. With all means (and chances) of (escape) coming out completely blocked, the stronghold was subjected to such great distress that the embryos of women, big with children, slipped out at the very sight of the fierce troops jumping in, and people immersed in the river of blood of the slain prayed for their lives.
+76. See previous shloka.
 77. The Sambuvarāya monarch, with drawn sword, came out of his palace in great anger, even as a snake with its lolling tongue might come out of a mole hill.  
 78. Though many a soldier of valour eagerly came forward to fight saying, “let me do it”, king Kampana preferred to face the Sambuvarāya himself.  
-36
-MADHURAVIJAY AM
 79. With the forepart of their bodies bent and eyes fixed, the two kings, sword in hand, stood still for a moment like a picture on a piece of painting.  
 80. The gods were thankful for the total absence of winking in their eyes, as they were looking on with fixed gaze, the flight (of the two heroes), their bodies divided at the waist.  
 81. Kampana's sword, reflecting as it did, the image of the Sambuvarāya monarch, looked like a pregnant daughter about to give birth to a husband for the celestial nymphs.  
