--- a/TIkA/padyam/madhurA-vijayam/sarva-prastutiH/4.md
+++ b/TIkA/padyam/madhurA-vijayam/sarva-prastutiH/4.md
@@ -58,7 +58,7 @@ M ADHURAVIJAY AM
 अथर्ववेदिनो विप्रास्तं विशेषैर्जयाशिषाम्।  
 अवर्धयन् मन्त्रपूतैर्हविर्मिरिव पावकम् ॥ १९ ॥  
 
-MADHU'R AVIJAY AM अथ निर्गत्य भवनादवेक्ष्यत महीक्षिता।  
+अथ निर्गत्य भवनादवेक्ष्यत महीक्षिता।  
 धारितस्तोरणाभ्यणे तुङ्गस्तुरगपुङ्गवः ॥ २०।  
 सपक्ष इव तार्श्वस्य सजातिरिव चेतसः।  
 सखेव गन्धवाहस्य संघात इव रंहसः ॥ २१ ॥   
@@ -81,18 +81,18 @@ MADHU'R AVIJAY AM अथ निर्गत्य भवनादवेक्ष
 (नवभिः कुलकम् ।) देहब(न्धद्ध)मित्रोत्साहं तमारुह्य महीपतिः।  
 अमस्त पृथिवीं सर्वामात्मनो हस्तवर्तिनीम् ॥ २९ ॥  
 
-Hin
-94
-MADHURA VIJAY AM
 स तत्र तत्र संभृतैः सैन्यैः सङ्ख्यातिलविभिः।  
 अन्तर्हिततदाभोगमत्यगाद् गृहगोपुरम् ॥ ३० ॥   
+
 तमनलिभिरानम्रकिरीटतलकीलितैः ॥ प्रणेमुधरणीपालास्तुरङ्गस्कन्धवर्तिनः ॥ ३१ ॥  
 
 आलोकशब्दमुखरैरस्याग्रे पादचारिभिः।  
 चोलकेरलपाण्ड्याद्यैर्वेत्रित्वं प्रत्यपद्यत ॥ ३२ ॥   
+
 आचारलाजैः पौराणां पुरन्ध्रयस्तमवाकिरन्।  
-अम्भसां बिन्दुभिः शुनेरभ्रमाला इवाचलम्।  
-३३ ॥ अथ कम्पमहीपालः कम्पयन् द्विषतां मनः।  
+अम्भसां बिन्दुभिः शुनेरभ्रमाला इवाचलम्। ३३ ॥ 
+
+अथ कम्पमहीपालः कम्पयन् द्विषतां मनः।  
 प्रातिष्टत दिशं भेजे मलयाचलमुद्रिताम् ॥ ३४ ॥  
 
 स नयन् महतीं सेनां व्यरुचद् वीरकुञ्जरः।  
@@ -128,8 +128,7 @@ MADHURA VIJAY AM
 क्रमात् प्रयातुमारेभे स्फारकोलाहलं बलम् ॥ ४४ ॥  
 
 तुरङ्गखुरकुदालदलितादपि भूतलात्।  
-न पुनः पांसुरुत्तस्थौ महेभमदंवृष्टिनिः।  
-४५ ॥
+न पुनः पांसुरुत्तस्थौ महेभमदंवृष्टिनिः। ४५ ॥
 तं तुङ्गभद्राकल्लोलशीकरासङ्गशीतलः ।
 आनुकूल्येन यात्रार्थमाचकषैव मारुतः ॥ ४६ ॥  
 
