--- a/TIkA/padyam/madhurA-vijayam/AnglAnuvAdaH/2.md
+++ b/TIkA/padyam/madhurA-vijayam/AnglAnuvAdaH/2.md
@@ -8,9 +8,7 @@ Slökäs 1 to 13: Queen Devāyi conceives. Her longings during pregnancy are des
 3. She who was the beloved consort of the lord of this earth, indulged in tasting particles of it as if to teach the responsibility of earth-sway to the infant in her womb.  
 4. The very nature of her longings in her pregnancy which always took a daring turn suggested that her would-be son would be wedded to heroic accomplishments.  
 5. Without caring for the Tungabhadra which flowed nearby and which was easily fordable, she desir ed to sport in the Tāmraparņi in company with her army of elephants that would raise waves in its waters (while they submerged with their huge bodies).  
-6. Though she was physically unable to walk as far as the pleasure-hill where the deer were quietly  
-MADHURAVIJAY AM
-grazing, she, in her mental flights, was on the tops of the Malāya mountain inhabited by (ferocious) lions.
+6. Though she was physically unable to walk as far as the pleasure-hill where the deer were quietly grazing, she, in her mental flights, was on the tops of the Malāya mountain inhabited by (ferocious) lions.
 7. She heard of Viṣnu's miraculous exploits underneath the earth and wanted to imitate Him .... (slöka imperfect).  
 8. She laughed at Śiva's valour in reducing Tripura aided by all such paraphernalia as the Earth for the chariot, Brahma for the charioteer, Sesa for the bowstring, the mountain for the bow and Hari for the arrow.  
 9. As time advanced, the limbs of her body began to put on flesh; he face regained its sweet and lazy eye-looks; her beily began to show its folds distinctly; and this change in his beloved filled the king withi delight.  
@@ -25,9 +23,7 @@ Shlokas 14 to 42: The birth of Kampaņa, the hero of the poem. The birth of the 
 16. Cool breeze scented with the flower-dusts from heavenly trees began to blow gently as if afraid of the new-born infant who was soon to attain the mastery of his earth.  
 17. The god of fire seemed to dance with joy, describing auspicious circles with his bright ends; and this betokened that fruitful sacrifices would soon be performed all over the southern countries in abundance.  
 18. The kalpa vřksās by showering down flowers through clouds looked as if courting in advance the friendship of the royal child who was soon to excel them in the glory of giving.  
-19. The wild elephants, with ichor flowing down their cheeks, trumpeted in joy, as if in contemplation of the destruction that awaited their enemies; the lions, at  
-MADHURĀVIJAY A M
-the hands of the royal baby who would soon grow up to be a daring hunter.
+19. The wild elephants, with ichor flowing down their cheeks, trumpeted in joy, as if in contemplation of the destruction that awaited their enemies; the lions, at  the hands of the royal baby who would soon grow up to be a daring hunter.
 20. The horses also neighed with joy, tearing the ground with their large hoofs, perhaps thinking, that they would soon be mounted upon by the child and a great glory awaited them in that role.  
 21. Tumultuous rejoicings among the people of the city arose, with trumpets blowing and çāraṇas shouting auspicious words.  
 22. The monarch of Kuntala wished to give away even himself bodily to those that bore the glad tidings of his son's birth,  
