--- a/TIkA/padyam/madhurA-vijayam/AnglAnuvAdaH/5.md
+++ b/TIkA/padyam/madhurA-vijayam/AnglAnuvAdaH/5.md
@@ -26,9 +26,7 @@ Shlokas 12 to 76: The 'song of the seasons. The amors of the Prince.
 17. By the decree of eternal law, the sun had to leave the southern region, in order to obtain, as it were, the cooling influence of the ice-clad Himālayas.  
 18. To the delight of the çakravāka birds, the days became longer and longer. In the unbearable heat of summer, it seemed that even the horses of the sun tottered and had to move with less speed.  
 19. The elephant Cupid, getting scorched in the sun, found shelter in the breasts of beautiful ladies, which were wet with pastes of sandal and had the cooling contact of pearl strings.  
-20. Day by day, waters in the pleasure-lakes in the palace-grounds of the king were found receding further and further from the shores. This made one fancy that they were getting more and more afraid of receiving  
-MADHURAVIJAY AM
-knocks from the breasts of Kuntala damsels who delighted in sporting in them.
+20. Day by day, waters in the pleasure-lakes in the palace-grounds of the king were found receding further and further from the shores. This made one fancy that they were getting more and more afraid of receiving knocks from the breasts of Kuntala damsels who delighted in sporting in them.
 21. The king was delighted with the unadorned faces of his beautiful ladies with the sirīṣa wreaths placed on the ear, and pearl-like drops of sweat appearing on them (the faces).  
 22. The king could not contain his emotion when his eyes became transfixed to the braids of hair on the heads of his charming women, which wafted sweet fragrance emanating from the evening-blossoming kutaja flowers with which they were decked.  
 23. The king got over the heat of the day by retiring with the choicest ladies to his summer-house where water-particles sparkling like stars were being sprayed incessantly.  
@@ -58,7 +56,6 @@ knocks from the breasts of Kuntala damsels who delighted in sporting in them.
 47. The king enjoyed the autumnal nights fully; for in their contents they resembled his ladies in every respect; blue water-lilies had the beauty of their eyes, the moon of their face, white water-lilies of their smile and stars of the pupil of their eyes.
 48. The young women guarding rice fields sang the spotless fame of the king, decked as their persons were with garlands of pearls that had come out of the bursting of ripe red sugarcane.  
 49. Elephants in rut, again and again, pulled the chains with which they were fastened, as forest winds laden with the smell of blossoming saptaparna trees blew over their bodies.  
-S.
 50. Everywhere forest grounds were adorned with blossoming Cina roses. And as the latter stirred in the wind, it seemed as if, by orders of the king, they were waving auspicious flame to his victorious horses before any others did.  
 51. Then making the nights long, as if to please the amorous king who loved to enjoy night sports very much, there came the dewy season.  
 52. Lotus clusters were hit hy snow and the moon became pale in colour. Only the faces of the king's beloved consorts gained unmatched charm.  
@@ -68,15 +65,11 @@ S.
 56. The king who incarnated Cupid in point of personal charm, thus enjoying the comforts of the cold season desired to sport with his ladies in the nights in spite of the chilly weather.  
 57. He very much liked to lie down on beds strewn with fresh foliage of clove plants, beds that were also dotted with particles of agaru fallen from the fore head of his ladies in their amorous practices.  
 58. His ladies presented a particularly attractive appearance to the king, with their faces white with the dust of lõdra flowers and with their foreheads anointed with musk paste.  
-HDC
 59. Young girls who got horripilation by reason of their proximity to their royal lover ascribed it to cold. But they felt ashamed, as beads of sweat, sug gestive of their unmistakable love passion, began to collect on their persons.  
 60. Young ladies feigning anger, but glad at heart, looked at the king, as he practised acts of love passion, such as biting the lips, drawing by the hair, and kissing all over.  
 61. The breasts of his ladies warm with blossom ing youthfulness drove away the cold of the season when the king cast longing looks on them; they were very attractive also in their semi-covered state with marks of nail scratches, and without the strings of pearls on them.  
-MADHURAVIJAY AM
-I
 62. Then spring came, with trees full of flowers as if for an offering, with sprouting foliage like hands folded in veneration. With the cooings of cuckoos, as if uttering humble words of obeisance, the season seemed to have come to pay homage to the king.  
-63. The gentle southern breezes that blew scatter ing fragrant mango leaf-dust seemed like sorcerers  
-turn the mind of anger-ridden dam sels that spurned their lovers.
+63. The gentle southern breezes that blew scatter ing fragrant mango leaf-dust seemed like sorcerers turn the mind of anger-ridden dam sels that spurned their lovers.
 64. Kimśuka trees with buds of dazzling red shone like lions with blood-stained nails—lions that had torn the deer of lovely travellers.  
 65. Rows of campaka clusters with collyrium like bees settling on them looked like lamps lighted by the spring in commemoration of Cupid's festival.  
 66. The sweet odour of wine in the mouths of beautiful-eyed ladies travelled to the vakula flowers from which the southern breeze took it. Thus it had its spreading in an appropriate manner.  
