--- a/TIkA/padyam/madhurA-vijayam/AnglAnuvAdaH/8.md
+++ b/TIkA/padyam/madhurA-vijayam/AnglAnuvAdaH/8.md
@@ -19,15 +19,11 @@ son
 12. Some royal warriors, like lions, wandered in the field of battle, and tore the heads of their adver saries with their sharp nails as if the latter were oppos ing elephants.  
 13. With one blow of his sword he (king) split in two both the elephants and their riders with their coat of mail. Their bodies, lying mingled, gave but a slender clue for distinguishing the ranks of elephants from those of foot-soldiers.  
 14. The king, by smiting the elephants on their globes, produced many a river of blood scattering the pearls on their head like sands.  
-ENT
 15. One thought, by looking at them, that there was not only one Tāmraparņi river but several hun dreds of Tāmraparnis.  
-U PISSANTRENS720***
 16. The heads of other elephants he pierced with his javelins and pearis came out from them. This reminded one of Subrahmanya boring a hole in the krownça mountain through which hosts of swans came out.  
 17. The agile king cut and wounded the bodies of those that opposed him, even as a hyena destroys. with his sharp nails, deer caught in front of him.  
-tie
 18. The brave king pounded the turbaned heads of his enemies with his mace in such a way that the eyes which came out of the sockets sank again in their old places.  
 19. When the king, thus began to work destruc tion in the enemy ranks with his several weapons, the opposing army fled before him and disappeared like rains in the huge fires that are started at the end of universe (Pralaya).68  
-MADHURAVIJAYAM
 20. Not even Parasurāma, Rāma, Bhīma or Arjuna provided such entertainment as the king did to that sage (Nārada) who always loved the sight of good battle.  
 
 Shlokas 21 to 40: Kampaņa met the Sultan in a duel and kilied him. The conquest of Madhurai was accomplished.  
@@ -36,9 +32,7 @@ Shlokas 21 to 40: Kampaņa met the Sultan in a duel and kilied him. The conquest
 23. His jewelled tuft in a line of unbroken bril liance as he rode on his fast horse looked like the wreath of his smoking anger which was about to blaze.  
 24. The sound produced by his forceful stringing of the bow seemed as if it were emanating from the anklets of the Goddess of Victory, who, after having deserted him so long, was now returning to him in haste.  
 25. The brave king Kampa delighted in his hav ing an opponent like the Suratrana (Sultan) who had by his valour reduced the Cõlas and Pāndyas and despoiled the wealth of Vira Ballāla (the Third).  
-26. The two proud opponents fought in a manner befitting the respective might of their arms, by shower  
-MADHURAVIJAY AM
-ing arrows on each other with their bows bent up to their ears.
+26. The two proud opponents fought in a manner befitting the respective might of their arms, by showering arrows on each other with their bows bent up to their ears.
 27. The king of the Yavanas warded off the arrows let fly by king Kampa, which were like the side glances of the Goddess of Heroism. And the king, similarly, checked the Pārasika's (Persian's) arrows which resembled the eye-darts of Yama's sister.  
 28. King Kampa let fly against the Yavana king his arrows that had, like serpents, drunk the life breaths of Këralas, like fire had consumed the lords of the Vanya Kingdom, and like the sun had destroyed the dark Andhras.  
 29. The scratches caused by the Yavana king's arrow on the person of king Kampa shone like the nail marks of the Goddess of Victory that was so passionate to enjoy her privacy.  
