--- a/TIkA/padyam/madhurA-vijayam/sarva-prastutiH/2.md
+++ b/TIkA/padyam/madhurA-vijayam/sarva-prastutiH/2.md
@@ -7,144 +7,478 @@ title = "२ कम्पण-बाल्यम्"
 जगत्-त्रयोद्भूति-निदान+++(=मुख्यकारण)+++-भूतं  
 तेजो विधातुः प्रथमेव सृष्टिः ॥ १ ॥+++(5)+++  
 
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+1. The queen conceived by the king and bore in her womb, the seed of royal race, as the cosmic waters held in them the tējas virile of Brahma with which the three worlds were created.  
+
+</details>
+
+
 **मुखेन** तन्वी शर-पाण्डरेण  
 विमुक्त-रत्नाभरणा **विरेजे**।  
 विलून-राजीव-वना दिनान्ते  
 +++(प्रतिबिम्ब)+++छाया-शशाङ्केन शरन्-नदीव ॥ २ ॥  
+
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+2. The queen put aside her jewels. Her face was somewhat pale like the sara reed and her form unusually slender. She shone like a river in autumn with lotuses gone and with the globe of the moon reflected on its watery surface.  
+
+</details>
+
 
 गर्भ-स्थितस्येव शिशोर् विधातुं  
 वसुन्धरा-मण्डल-भार-शिक्षाम्।  
 अरोचयत् पार्थिव-धर्मपत्नी  
 मन्ये मृदास्वाद-रसाऽनुबन्धम् ॥ ३ ॥  
 
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+3. She who was the beloved consort of the lord of this earth, indulged in tasting particles of it as if to teach the responsibility of earth-sway to the infant in her womb.  
+
+</details>
+
+
 अनन्य-सामान्य-भुजापदानम्  
 उत्पत्स्यमानं तनयं नृपम्य।  
 अनारतं वीररसानुबन्धं न्यवेदयद् दौहृदमेव देव्याः ॥ ४ ॥  
 
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+4. The very nature of her longings in her pregnancy which always took a daring turn suggested that her would-be son would be wedded to heroic accomplishments.  
+
+</details>
+
+
 सा तुङ्गभद्रां सविधे वहन्ती सुध्रनादृत्य सुखावगाहाम्।  
 विहर्तुमच्छन्निजसैन्यनागैस्तरङ्गिते वारिणि ताम्रपर्णयाः ॥ ५ ॥  
+
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+5. Without caring for the Tungabhadra which flowed nearby and which was easily fordable, she desir ed to sport in the Tāmraparņi in company with her army of elephants that would raise waves in its waters (while they submerged with their huge bodies).  
+
+</details>
+
 
 अपारयन्ती चरितैणशावं क्रीडाचलोपान्तमपि प्रयातुम्।  
 आखेटरागादधिरोढुमैच्छन्माद्यन्मृगेन्द्रान् मलयाद्रिकूटान् ॥ ६ ॥  
 
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+6. Though she was physically unable to walk as far as the pleasure-hill where the deer were quietly grazing, she, in her mental flights, was on the tops of the Malāya mountain inhabited by (ferocious) lions.
+
+</details>
+
+
 सा दैत्यनाथप्रथनाय पूर्वं विष्णोरवस्तात्कृतपौरुषस्य।  
 आकर्णयन्ती कुहनाप्रपञ्चादासी............॥ ७ ॥  
+
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+7. She heard of Viṣnu's miraculous exploits underneath the earth and wanted to imitate Him .... (slöka imperfect).  
+
+</details>
+
 
 पृथ्वी रथः सारथिरब्जसूतिः शेषेण सज्यं धनुरद्रिराजः।  
 शरश्च शौरिः किल हन्त लक्ष्यं त्रयं पुगमित्यहसत् पुरारिम् ॥ ८ ॥  
 
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+8. She laughed at Śiva's valour in reducing Tripura aided by all such paraphernalia as the Earth for the chariot, Brahma for the charioteer, Sesa for the bowstring, the mountain for the bow and Hari for the arrow.  
+
+</details>
+
+
 क्रमाज्जहद्भिः कशिमानमङ्गैर्मुवेन मुग्धालसलोचनेन।  
 मध्येन च त्यक्तवलित्रयेण नरेश्वरं नन्दयति स्म राज्ञी ॥ ९ ॥  
+
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+9. As time advanced, the limbs of her body began to put on flesh; he face regained its sweet and lazy eye-looks; her beily began to show its folds distinctly; and this change in his beloved filled the king withi delight.  
+
+</details>
+
 
 सौभाग्यगन्धद्विपदानलेखा रराज तस्या नवरोमराजिः।  
 तेजोनिधिं गर्भतले निगूढं कालोरगी रक्षितुमागतेव ॥ १० ॥  
 
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+10. The auspicious line of hair that was on her abdomen looked like a black serpent on guard in order to protect the infant within.  
+
+</details>
+
+
 श्यामायमानच्छविना मुखेन स्तनद्वयं तामरसेक्षणायाः।  
 संदष्टनीलोत्पलयोरभिख्यां रथाङ्गनानोरधरीचकार ॥ ११ ॥  
+
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+11. Her breasts, with black nipples, surpassed in their attractiveness the çakravāka couple with a bit of blue utpala flower in their beaks.  
+
+</details>
+
 
 तामम्बुगर्भामिव मेघमालां वेलामिवाभ्यन्तरलीनचन्द्राम्।  
 अन्तस्थरत्नामिव शुक्तिरेखामापन्नसत्त्वां प्रभुरभ्यनन्दत् ॥ १२ ॥   
 
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+12. The lord of earth regarded her being in an interesting condition, as if she were a rain-cloud full of water within, a pearl oyster with pearl inside and night time foreshadowing the rise of the moon.  
+
+</details>
+
+
 ततः परं तापहरः प्रजानां पुरोहितोक्तया पुरुहूतकल्पः।  
 व्यधत्त काले विभवानुरूपं पुंसां वरः पुंसवनक्रियां सः ॥ १३ ॥  
+
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+13. The king who was as prosperous as Indra and who was ever bent on the amelioration of his subjects, celebrated the ceremony of pumsavana as ordered by his preceptor, at the appointed time, on a scale befitting his royal rank.
+
+</details>
+
 
 अथ प्रशस्ते दिवसे समस्तैर्मोहूर्तिकैः साधितपुण्यलग्ने।  
 असूत सूनुं नरनाथपत्नी देवी महासेनमिवेन्दुमौलेः ॥ १४ ॥  
 
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+14. Then on an auspicious day, at the hour pro nounced most auspicious by astrologers, the queen presented her lord with a boy, as Goddess Pārvati bore to Śiva the child Subrahmanya.  
+
+</details>
+
+
 महौजसन्तस्य निजैर्यशोभिरुद्वेलदुग्धोदधिपूरगौरैः।  
 प्रक्षालितानीव तदा बभूवुधृतप्रसादानि दिशां मुखानि ॥ १५ ॥  
 
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+15. The quarters then shone with spotless lustre as if they had been newly washed by royal fame which was fit to be likened to the whiteness of milk that filled the milky ocean.  
+
+</details>
+
+
 ज्ञात्वा वशे तस्य भुवं भवित्री भयादिवास्पृष्टपरागलेशः।  
 आकृप्टकल्पद्रुमपुष्पगन्धो मरुद् ववौ मन्दममन्दशैत्यः ॥ १६ ॥   
+
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+16. Cool breeze scented with the flower-dusts from heavenly trees began to blow gently as if afraid of the new-born infant who was soon to attain the mastery of his earth.  
+
+</details>
+
 आगामिनीमध्वरहव्यसिद्धिं निश्चित्य देशेष्वपि दक्षिणेषु।  
 प्रदक्षिणीभूतशिखाकलापो ननत हर्षादिव हव्यवाहः ॥ १७ ॥  
 
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+17. The god of fire seemed to dance with joy, describing auspicious circles with his bright ends; and this betokened that fruitful sacrifices would soon be performed all over the southern countries in abundance.  
+
+</details>
+
+
 कल्पद्रुमास्तेन हरिष्यमाणां मत्वा निजां त्यागयशःपताकाम्।  
 पयोधरप्रेषितपुष्पवर्षाः प्रागेव सन्धानमिवान्वतिष्ठन् ॥ १८ ॥  
+
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+18. The kalpa vřksās by showering down flowers through clouds looked as if courting in advance the friendship of the royal child who was soon to excel them in the glory of giving.  
+
+</details>
+
 
 स्ववैरिभूतान् मृगयासु सिंहान् हन्ता प्रवीरोऽयमिति प्रहर्षात।  
 प्रभिन्नगण्डस्रुतदानधारा जगर्जुरुचैर्जयकुञ्जरेन्द्राः ॥ १९ ॥  
 
 
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+19. The wild elephants, with ichor flowing down their cheeks, trumpeted in joy, as if in contemplation of the destruction that awaited their enemies; the lions, at  the hands of the royal baby who would soon grow up to be a daring hunter.
+
+</details>
+
+
+
 83
 अस्योपवाह्यत्वमुपेत्य लभ्यां कीर्ति भवित्रीमिव भावयन्तः ।
 मामुल्लिखन्तश्चटुलैः खुराणैर्जिहेपिरे हर्षजुषस्तुरङ्गाः ॥ २० ॥   
+
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+20. The horses also neighed with joy, tearing the ground with their large hoofs, perhaps thinking, that they would soon be mounted upon by the child and a great glory awaited them in that role.  
+
+</details>
+
 प्रस्तावितो मङ्गलतूर्यवोषैः प्रसारितश्चारणचाटुवादैः।  
 प्रहृष्यतां तत्र पुरे जनानां कोलाहलः कोऽपि समुज्जजम्भे ॥ २१ ॥   
+
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+21. Tumultuous rejoicings among the people of the city arose, with trumpets blowing and çāraṇas shouting auspicious words.  
+
+</details>
+
 सुखायमानों सुतजन्मवातौं सहर्षमावेदयते जनाय ।
 अवाञ्छदात्मानमपि प्रदातुं कुतूहली कुन्तलभूमिपालः ॥ २२ ॥   
+
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+22. The monarch of Kuntala wished to give away even himself bodily to those that bore the glad tidings of his son's birth,  
+
+</details>
+
 विशृङ्खलास्तस्य गिरा निरीयुः कारागृहेभ्यो विमतावरोधाः ।
 तुलुष्कबन्दीनिवहाय तूर्णमागामिने दातुमिवावकाशम् ॥ २३ ॥  
+
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+23. By his royal word of command the prisons were thrown open and prisoners were unchained and liberated as if to make room for future incumbents, viz., the turuskas.  
+
+</details>
+
 
 SHARE
 स्नातन्ततो धौतदुकूलधारी बितीर्य भूरि द्रविणं द्विजेभ्यः।  
 महीपतिः पुत्रमुखं दिदृक्षुः प्राविक्षदन्तःपुरमात्तहर्षः ॥ २४ ॥  
 
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+24. Duly bathed and clad in white silk, the king: after doling out immense riches as gifts to Brāmins, entered the lying-in room with a glad heart to see the face of his son.  
+
+</details>
+
+
 अवैक्षत क्षामशरीरयष्टेः कुमारमुत्सङ्गगतं स देव्याः।  
 शरत्कृशाया इव शैवलिन्यास्तरङ्गलग्न कलहंसशाबम् ॥ २५ ॥  
 
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+25. He saw the child lying on the lap of his slim featured queen like a swan youngling on the wavy-bed of the autumnal river.  
+
+</details>
+
+
 प्रकीर्णकाश्मीरपरागगौरैस्तिरस्कृताभ्यन्तरदीपशोभैः।  
 निवार्यमाणं मुहुरुज्जिहानैररिष्टगेहं महसां प्ररोहैः ॥ २६ ॥  
+
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+26. 26 to 30. Rays of light, whitish as camphor dust, played on the child's form which subdued the lustre of the lamps burning in the lying-in-chamber. With his two reddish hands closed, the child looked as if already practising the art of holding within his grasp the god dess of prosperity of his enemies. His two gracefully shaped feet bore auspicious marks indicative of conch, disc, umbrella, lotus, banner, and fish. His tiny fingers, reddish and soft as tender foliage, were also beautiful to look at. He bore the hairy sign of Śrīvatsa on his breast which suggested that he was an avatāra of Viṣnu, and, that unbroken prosperity would mark his life. His forehead was adorned with a circle of hair between the eye-brows. His eyes were large like the petals of blooming lotus. His nose was lofty; and a sweet smile played on his red lips. Altogether, the child's face was surpassingly beautiful.
+
+</details>
+
 
 ६
 मुहुर्मुहुः पल्लवपाटलेन मुष्टीकृतेन द्वितयेन पाण्योः ।
 अरातिलक्ष्मीकचसंचयानामाकर्षशिक्षामिव शीलयन्तम् ॥ २७ ॥  
 
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+27. See previous shloka 26.
+
+</details>
+
+
 आलक्ष्यरेखामयशङ्खचक्रच्छत्रारविन्दध्वजमीनचिह्नौ।  
 प्रवालताम्राङ्गुलिदर्शनीयौ सुजातपाणी चरणौ वहन्तम् ॥ २८ ॥  
+
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+28. See previous shloka 26.
+
+</details>
+
 
 का(लेये) कलामप्यसुरान्तकस्य प्रकाशयन्तीमवतारमन्यम्।  
 अचञ्चलश्रीतटिदभ्रलेखां श्रीवत्समुद्रामुरसा दधानम् ॥ २९ ॥  
 
 
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+29. See previous shloka 26.
+
+</details>
+
+
+
 ऊर्णासनाथायतफालपट्टमुन्निद्रपद्मच्छददीर्घनेत्रम् ।
 ताम्राधरोष्ठं समतुङ्गनासं मुग्धस्मिताङ्ग मुखमुद्रहन्तम् ॥ ३० ॥  
+
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+30. See previous shloka 26.
+
+</details>
+
 
 (षड्भिः कुलकम् ।)
 
 अव्याजसौन्दर्यगुणाभिरामं कुमारमालोकयतश्चिराय।  
 नृपस्य निप्पन्ददृशो मुहूर्तमानन्दवाप्पोऽभवदन्तरायः ॥ ३१ ॥  
 
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+31. Tears of joy, for a while, acted as a check on the steadfast look of his eyes that feasted on the cherubic form of the child.  
+
+</details>
+
+
 आश्लिष्यतस्तस्य दृशा तनुजमन्तः प्रहर्षेण विजम्भितेन।  
 प्रायः प्रणुन्नैबहिरङ्गकेभ्यः प्रादुर्बभूबे पुलकप्ररोहैः ॥ ३२ ॥  
 
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+32. The king embraced the child with his eyes; and the excessive emotion in his mind burst out as manifest by horripulation.  
+
+</details>
+
+
 ततः प्रतीतेऽहि पुरोहितेन नरेन्द्रसूनुः कृतजातकर्मा।  
-समिद्धतेजाः समतामयासीन्मन्त्रप्रणीतेन मखानलेन ॥ ३३
+समिद्धतेजाः समतामयासीन्मन्त्रप्रणीतेन मखानलेन ॥ ३३॥
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+33. On an auspicious day, the jāta karman rites of the child were performed as directed by the priest, and the child grew in splendour like the god of fire that witnesses those rites.
+</details>
+
 आकम्पयिष्यत्ययमेकवीरः संग्रामरङ्गे सकलान।तीन्।  
 इत्येव निश्चित्य स दीर्घदर्शी नाम्ना सुतं कम्पन इत्यकार्षीत् ॥ ३४ ॥  
+
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+34. The king who always looked ahead named his child Kampana, as he clearly foresaw in his mind that, in proper time, the latter would become a matchless (warrior, and was sure to make his enemies in the field of battle quake with fear.  
+
+</details>
+
 
 धात्रीभिराप्ताभिरभु कुमारमवर्धयद् भूपतिरादरेण।  
 यज्वा यथाज्याहुतिभिहुताशं सस्यं यथा वृष्टिभिरम्बुवाहः ॥ ३५ ॥  
 
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+35. Just as the sacrificer tends the fire with ghee offerings, and just as the cloud sustains the corn with rains, so too, the king had his child brought up by trustworthy nurses.  
+
+</details>
+
+
 क्रमेण धात्रीजनशिक्षितानि वचांसि यातानि च मन्थराणि।  
 स्खलत्पदान्यस्य धराधिनाथो निशम्य दृष्ट्वा च स निर्वृतोऽभूत् ॥ ३६ ॥  
+
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+36. He was overjoyed to hear the lisping words and to look at the tottering gaits of his child, who had his lessons on talking and walking from his foster mother.
+
+</details>
+
 
 तदाननं तस्य सुगन्धि जिघ्रन्न्  
 आलक्ष्य-दन्ताङ्कुर-दर्शनीयम्।  
 न तृप्तिम् आसादयति स्म राजा  
 नवोदयं हंस इवारविन्दम् ॥ ३७ ॥  
 
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+37. Like a swan that ever loves the touch of budding lotuses, the king was never satisfied with kis sing the fragrant mouth of his child with no teeth yet perceptible in it.  
+
+</details>
+
+
 तथा न कर्पूरभरैर् न हारैर्   
 न चन्दनैर् अप्य् अमृतांशु-पादैः।  
 यथाभवन् निवृतम् अस्य गात्रं  
 सुताङ्ग-संस्पर्श-भुवा सुखेन ॥ ३८ ॥+++(4)+++  
+
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+38. The pleasurable feeling which the king had while embracing his cherub boy, was not to be matched by the contact of camphor, pearl, sandal-paste or moon beams.  
+
+</details>
+
 
 कल-क्वणत्-काञ्चन-किङ्किणीकं+++(5)+++  
 गृहाङ्गणे जानु-चरं कुमारम्।  
 आलोकयन्ताव् अमृताम्बु-राशेर्  
 मग्नाविवान्तः पितरावभूताम् ॥ ३९ ॥ +++(4)+++  
 
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+39. The king and the queen felt themselves bathed in an ocean of nectar as they enjoyed looking at their child crawling on his knees on the floor of the palace, with the small bells in his ornaments tinkling.  
+
+</details>
+
+
 अथ क्रमात् पार्थिव-धर्म-पत्नी  
 सुताव् उभौ कम्पन-सङ्गमाख्यौ।  
 असूत चिन्ता-मणि--पारिजातौ  
 पयः+++(=दुग्ध)+++-पयोधेर् इव वीचि-रेखा ॥ ४० ॥+++(5)+++  
+
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+40. Then, in course of time, the queen bore to the king two other sons called Kampana and Sangama who were like pārijāta and çintāmaại that sprang from the milky ocean.  
+
+</details>
+
 
 स राजसूनुः सह सोदराभ्यां  
 दिने दिने **वृद्धिम् उपाससाद**।  
 **शशीव** सानन्दम् उदीक्ष्यमाणः  
 प्रजाभिर् आलोक-समुत्सुकाभिः ॥ ४१ ॥+++(5)+++  
 
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+41. The prince (viz, Kampana), along with his two brothers, began to grow, day by day ; and people were in ecstasies when they looked at him as at the (waxing) moon.  
+
+</details>
+
+
 पशुपतिर् इव नेत्रैः सोम-सूर्याग्नि-रूपैर्  
 नय इव निरपायैः प्राभव-उत्साह-मन्त्रैः।  
 भव+++(=सृष्टिर्)+++ इव पुरुषार्थैर् धर्मकामार्थ-संज्ञैस्  
 त्रिभिर् अपि नरपालस् तैस् तनूजैर् अभासीत् ॥ ४२ ॥+++(5)+++  
+
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+42. The king, with his three children, shone like Śiva with his three eyes, the moon, the sun and the fire; or like statesmanship, with its three unfailing aspects, Power, Daring and Counsel; or like life with its three ends, Virtue, Wealth and Enjoyment.  
+
+</details>
+
