--- a/TIkA/padyam/madhurA-vijayam/sarva-prastutiH/1.md
+++ b/TIkA/padyam/madhurA-vijayam/sarva-prastutiH/1.md
@@ -3,6 +3,16 @@ title = "१ प्रवेशः"
 
 +++
 
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+Slokas 1 to 16: Gangā Dēvī's obeisance to the poets who influenced her.
+
+Shlokas 17 to 24: Ganga Dēvi un-literary criticism.
+
+Slokas 25 to 42: The greatness of Bukka, the father of Kampaņa, is described.
+</details>
+
+
 ## देववन्दनम्
 कल्याणाय सतां भूयात्  
 देवो दन्तावलाननः+++(=दन्ति+आननः)+++ ।  
@@ -994,7 +1004,14 @@ title = "१ प्रवेशः"
 
 
 
-
 इति श्रीगङ्गादेव्या विरचिते मधुराविजय नाम्नि वीरकम्पराय-चरिते प्रथमः सर्गः।
 
 मीनाक्ष्यै नमः ।
+
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+Thus ends the first canto of Virakamparāya çaritam called Madhurāvijayam, composed by Sri Gangā Dēvi.
+
+Obeisance to Goddess Minākṣi !
+</details>
