--- a/TIkA/padyam/madhurA-vijayam/sarva-prastutiH/2.md
+++ b/TIkA/padyam/madhurA-vijayam/sarva-prastutiH/2.md
@@ -2,6 +2,14 @@
 title = "२ कम्पण-बाल्यम्"
 
 +++
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+Slökäs 1 to 13: Queen Devāyi conceives. Her longings during pregnancy are described.
+
+Shlokas 14 to 42: The birth of Kampaņa, the hero of the poem. The birth of the other two sons of Bukka, Kampaņa and Sangama, is also mentioned.
+</details>
+
+
 अथास्य वंश-प्रतिरोह-बीजं  
 मही-भुजो गर्भम् अधत्त देवी।  
 जगत्-त्रयोद्भूति-निदान+++(=मुख्यकारण)+++-भूतं  
