--- a/TIkA/padyam/madhurA-vijayam/sarva-prastutiH/3.md
+++ b/TIkA/padyam/madhurA-vijayam/sarva-prastutiH/3.md
@@ -8,6 +8,15 @@ title = "३ यौवनारम्भः"
 मूलम् [अत्र](https://archive.org/details/madhura_vijaya/page/n43/mode/2up), [अत्र](https://archive.org/details/madhuravijaya-of-gangadevi-thiruvenkatachari-mula-and-translation/page/87/mode/2up) ।
 </details>
 
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+
+Shlokas 1 to 20: The early training of Kampana. His bodily charm and qualities are also described. His marriage with Gangū Dēvī and other princesses is mentioned.
+
+
+Shlokas 21 to 48: The mission of Kampaņa in the Tamil country is explained by Bukka. Here is another Polonius. Of special significance is the exhortation that Kampana must destroy the Sambuvarāya as a prelude to his conquest of Madhura from the Sultan.
+
+</details>
 
 
 ततो यथावत् कृतचौल-सत्क्रियो  
