--- a/TIkA/padyam/madhurA-vijayam/sarva-prastutiH/5.md
+++ b/TIkA/padyam/madhurA-vijayam/sarva-prastutiH/5.md
@@ -2,6 +2,17 @@
 title = "५"
 
 +++
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+
+Shlokas 1 to 11: Kampana installed himself Governor of his father at Marakatanagara (Kanci) and established good government.
+
+Shlokas 12 to 76: The song of the seasons. The amors of the Prince.
+
+</details>
+
+
 अथ स तत्र महीतलमण्डने मरतकाहयभाजि महापुरे।  
 विरचितस्थितिरप्रतिशासनं जगदशेपमरक्षदनाकुलम् ॥ १॥
 
