--- a/TIkA/padyam/madhurA-vijayam/sarva-prastutiH/6.md
+++ b/TIkA/padyam/madhurA-vijayam/sarva-prastutiH/6.md
@@ -2,6 +2,14 @@
 title = "६"
 
 +++
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+Shlokas 1 to 69: The water-sports of the Prince.
+
+</details>
+
+
 अथ वरननुभिः समं कदाचिद् विरचयितु कसुमापचायलीलाम्।  
 प्रमदवनममर्त्यकामिनीमिर्हरिरिव नन्दनमासदन्नरेन्द्रः ॥ १ ॥  
 
@@ -235,7 +243,6 @@ MADHURAVIJ AYAM चरणबिलुठितो विलचितोरुः
 </details>
 
 
-D)
 विह्नतिरयपरिच्युतान् वतंसानसितदृशामनुदद् बहिः प्रवाहः।  
 नहि जडिमसमन्वितोऽपि कोऽपि श्रुतिविषयात् पतितैः करोति मैत्रीम् ॥६४॥
 
@@ -292,7 +299,6 @@ D)
 
 
 
-111
 ततः सैरन्ध्रीभिः कृतसमुचिताकल्परचनः ___ पुरन्ध्रीभिः सार्धं समधिगतशुद्धान्तवसतिः।  
 त्रयीगीतं तेजस्त्रिपुरहरमाराध्य विधिवद्
 याहापारेनरपतिरहश्शेषमनयत् ॥ ६९ ॥  
