--- a/TIkA/padyam/madhurA-vijayam/sarva-prastutiH/7.md
+++ b/TIkA/padyam/madhurA-vijayam/sarva-prastutiH/7.md
@@ -2,6 +2,14 @@
 title = "७"
 
 +++
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+Shlokas 1 to 50: Day and Night described. Gangā Dēvi's description of Night to her husband.
+
+</details>
+
+
 अथ कम्पनरेन्द्रसुभ्रुवां मुखपद्मान्यनुहार्य पङ्कजैः।  
 अपराधभियेव भानुमानपरक्ष्माधरकन्दरामगात् ॥ १ ॥  
 
@@ -562,6 +570,6 @@ TITM
 
 कलयामि कलङ्ककैतवान्नियत धारयते.........।  
 *
-* इतः परमुपत्रिंश-पद्य-निवेश-पर्याप्त-पत्रं तालपत्रादर्शे न लिखितम्।  
-'व्याघ्र. पुरी'त्यादीनां वृत्तभेददर्शनांदष्ठमसगन्तिर्भावः संभाव्यते ।
+* इतः परमुपत्रिंशत्-पद्य-निवेश-पर्याप्त-पत्रं तालपत्रादर्शे न लिखितम्।  
+'व्याघ्र. पुरी'त्यादीनां वृत्तभेद-दर्शनाद् अष्ठम-सर्गान्तर्भावः संभाव्यते ।
 
