--- a/TIkA/padyam/madhurA-vijayam/sarva-prastutiH/8.md
+++ b/TIkA/padyam/madhurA-vijayam/sarva-prastutiH/8.md
@@ -2,143 +2,435 @@
 title = "८"
 
 +++
-.....व्यात्रपुरीति सा यथार्थम् ॥
-अधिरङ्गमवाप्तयोगनिंद्र हरिमुद्वेजयतीति जातभीतिः।  
-पतितं मुहुरिष्टकानिकायं फणचक्रेण निवारयत्यहीन्द्रः ॥ ........नुवूर्णदूर्णनाभ वनवेतण्डबिमर्दिनीमवस्थाम्।  
-विरतान्यपरिच्छदप्रपञ्चो भजते हन्त।  
-गजामाथिनाथः ॥ घुणजग्धकवाटसम्पुटानि स्फूटदूर्वाकुरसन्धिमण्डपानि।  
-श्लथगर्भगृहाणि वीक्ष्य दूये भृशमन्यान्यपि देवताकुलानि ॥
-मुखराणि पुरा मृदङ्गयोरैरमितो देवकुलानि यान्यभूवन्।  
-तुमुलानि भवन्ति फेरवाणां निनदस्तानि भयङ्करैरिदानीम् ॥ अतिलङ्घय चिरन्तनीं स्वसीमामपदेप्वर्पितजीवनप्रवृत्तिः।  
-मुहुरूत्पथगामिनी तुलुष्कानधुना हानुकरोति सह्यकन्या ॥ सतताध्वरधुमसौरभैः प्राङनिगमोद्घोषणवद्भिरग्रहारैः : अधुनाजनि विस्रमांसगन्धैरधिकक्षीबतुलुष्कसिंहनादैः ॥ मधुरोपवन निरोक्ष्य दूये बहुशः खण्तिनालिकेरषण्डम्।  
-परितो नृकरोटिकोटिहारप्रचलच्छूलपरम्परापरीतम् ॥ रमणीयतरो बभूव यस्मिन रमणीनां मणिनू पुरप्रणादः।  
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+(The condition of the Tamil country after the Muslim Occupation.)(N. B.—Only the slokas available in the printed book in whole are translated here and as in the original no numbers are given.)
+
+</details>
+
+
+
+.....व्याघ्रपुरीति सा यथार्थम् ॥
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+
+
+... ... Verily has become the abode of tigers, true to its name. ... (incomplete).
+</details>
+
+
+अधिरङ्गमवाप्तयोगनिंद्रं  
+हरिम् उद्वेजयतीति जातभीतिः।  
+पतितं मुहुर् इष्टकानिकायं  
+फणचक्रेण निवारयत्य् अहीन्द्रः ॥ +++(5)+++
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+In Srirangam the lord of serpents is seen warding off the tumbling debris of brick with his hood lest their fall disturb the sleep of yoga in which Hari is wrapped up there.
+
+</details>
+
+
+
+........नुवूर्णदूर्णनाभं  
+वनवेतण्डबिमर्दिनीम् अवस्थाम्।  
+विरतान्यपरिच्छदप्रपञ्चो  
+भजते हन्त गजप्रमाथिनाथः ॥ 
+
+
+
+घुण-जग्ध-कवाट-सम्पुटानि  
+स्फूटद् ऊर्वाङ्कुर-सन्धि-मण्डपानि।  
+श्लथ-गर्भ-गृहाणि वीक्ष्य दूये  
+भृशम् अन्यान्य् अपि देवताकुलानि ॥
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+When I look at the state of the temples of other gods also, my distress knows no bounds. The foldings of their door are eaten up by wood worms. The arches over their inner sanctuaries are rent with wild growths of vegetation.
+
+</details>
+
+
+
+मुखराणि पुरा मृदङ्गघोषैर्  
+अभितो देवकुलानि यान्य् अभूवन्।  
+तुमुलानि भवन्ति फेरवाणां  
+निनदैस् तानि भयङ्करैर् इदानीम् ॥ 
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+Those temples which were once resonant with the sounds of mridanga drums, are now echoing the fearful howls of jackals.
+
+</details>
+
+
+
+अतिलङ्घय चिरन्तनीं स्वसीमामपदेप्वर्पितजीवनप्रवृत्तिः।  
+मुहुरूत्पथगामिनी तुलुष्कानधुना हानुकरोति सह्यकन्या ॥
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+The river Kāvēri, uncurbed by proper bunds or dams, has become deflected very much from her time-honoured course, and flows in all sorts of wrong directions as if imitating the Turuskas in their actions.
+
+</details>
+
+
+
+सतताध्वरधुमसौरभैः प्राङनिगमोद्घोषणवद्भिरग्रहारैः।  
+अधुनाजनि विस्रमांसगन्धैरधिकक्षीबतुलुष्कसिंहनादैः ॥
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+The Brāhmin streets, where once the sacrificial smoke was ever seen rising, and the chanting of Vēdās always greeted the ears, now exhude the musty odour of meat, and resound with the lion-roars of drunken Turuṣkas.
+
+</details>
+
+
+
+मधुरोपवनं निरोक्ष्य दूये  
+बहुशः खण्तिनालिकेर-षण्डम्।  
+परितो नृ-करोटि-कोटि-हार-  
+प्रचलच्-छूल-परम्परा-परीतम् ॥
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+I very much lament for what has happened to the groves in Madhura. The cocoanut trees have all been cut and in their place are to be seen rows of iron spikes with human skulls dangling at the points.
+
+</details>
+
+
+
+ रमणीयतरो बभूव यस्मिन रमणीनां मणिनू पुरप्रणादः।  
 द्विजशृङ्खलिकाखलाक्रियाभिः कुरुते राजपथः स्वकर्णशूलम् ॥
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+In the highways which were once charming with the sounds of anklets of beautiful women, are now heard ear-piercing noises of Brāhmins being dragged, bound in iron-fetters.
+
+</details>
+
+
 
 119
 परितस्तततन्तुवायतन्तुव्यतिषङ्गाजनितानि जालकानि।  
-पुरगोपुरसालभञ्जिकानां दधते चीनपटावगुण्ठनत्वम् ॥ हिमचन्दनवारिसेकशीतान्यभवन् यानि गृहाङ्गणानि राज्ञाम्।  
-हृदयं मम खेदयन्ति तानि द्विजबन्दीनयानाम्बुदूषितानि ॥
+पुरगोपुरसालभञ्जिकानां दधते चीनपटावगुण्ठनत्वम् ॥
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+Webs worn by spiders have since taken the place of silk veils with which the dolls adorning the outer-towers of the city were once covered. 
+
+</details>
+
+
+
+हिमचन्दनवारिसेकशीतान्यभवन् यानि गृहाङ्गणानि राज्ञाम्।  
+हृदयं मम खेदयन्ति तानि द्विजबन्दी-नयानाम्बुदूषितानि ॥
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+Royal court-yards which were once cool with the spraying of ice-cold sandal, now distress me, wet as they are with the tears of Brāhmins taken as prisoners.
+
+</details>
+
+
+
 न तथा कटुघूत्कृताद् व्यथा मे हृदि जीर्णोपवनेषु घूकलोकात्।  
 परिशीलितपारसीकवाग्भ्यो यवनानां भवने यथा शुकेभ्यः ।
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+Screechings of owls in worn-out pleasure groves do not afflict me so much as the voice of parrots taught to speak Persian in the houses of Yavanas (Turuskas).
+</details>
+
+
+
 स्तनचन्दनपाण्डु ताम्रपास्तरुणीनामभवत् पु! यदम्भः : तदसूग्निरुपैति शोणिमानं निहतानामभितो गवां नृशंसः ॥
-TERROEM
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+The waters of Tāmbraparni which were once white with sandal paste rubbed away from the breasts of charming girls are now flowing red with the blood of cows slaughtered by the miscreants.
+
+</details>
+
+
+
 सुवते न यथापुरं वसूनि क्षितयो वर्षति पूर्ववन्न शक्रः।  
 शमनोऽपि जनं नयत्यकाण्डे विषयेऽस्मिन् यवनैर्हतावशिष्टम् ॥
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+Earth is no longer the producer of wealth. Nor does Indra give timely rains. The God of death takes his undue toll of what are left lives of undestroyed by the Yavanas.
+
+</details>
+
+
+
 श्वसितानिलशोषिताधराणि श्लथशीर्णायतचूर्णकुन्तलानि।  
 बहुबाप्पपरिप्लुतेक्षणानि द्रनिडानां वदनानि वीक्ष्य दूये ॥
-IP
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+I am very much distressed by looking at the tearful faces of Drāvidas, their lips parched by hot sighs, and their hair worn in utter disorder.
+
+</details>
+
+
 श्रुतिरस्तमिता नयः प्रलीनो विरता धर्मकथा च्युत चरित्रम्।  
 सुकृतं गतमाभिजात्यमस्तं किमिवान्यत् कलिरेक एव धन्यः ॥
-इति सा निखिं निवेद्य राज्ञे यवनानां जनगर्हितं चरित्रम्।  
-अतिभीषणमात्मनः प्रभावात् क्रमपि प्रादुरभावयत् कृपाणम् ॥
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+The Kali age deserves now deepest congratu lations for being at the zenith of its power; for, gone is sacred learning; hidden is refinement; hushed is the voice of Dharma; destroyed is discipline, and discounted is nobility of birth.
+
+</details>
+
+
+
+इति सा निखिलं निवेद्य राज्ञे  
+यवनानां जनगर्हितं चरित्रम्।  
+अतिभीषणमात्मनः प्रभावात्  
+कम् अपि प्रादुर् अभावयत् कृपाणम् ॥
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+Having thus narrated the sickening career of the Yavanas, she (the strange woman that appeared before Kampaņa) by her wonderful power of magic caused a terrible-looking sword to appear.
+
+</details>
+
+
+
+
+## खड्गवर्णनम्
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+The description of the sword presented to Kampaņa. The exhortation of the female Apparition to Kampaņa to rid Madhurai of the Muslim rule.
+
+</details>
+
+
 अथ तं कलधौनकोश[तः सा क*]रलमत्सरुरुचखान खड्गम्।  
 अचिरोज्झितकञ्चकानुबन्धस्फुटकालोरगभोगसाम्यमाजम् ॥
-क्षयकालकरालभद्रकालीगलकालागरुकर्द[मायमा ]नैः।  
-महसां प्रसरैदीपहार्यं किमपि ध्वान्तमिव प्रकाशयन्तम् ॥
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+In its shining silver sheath and handle, it looked like a serpent that had recently sloughed.
+</details>
+
+
+क्षय-काल-कराल-भद्र-काली-  
+गल-कालागरुकर्द[मायमा ]नैः।  
+महसां प्रसरैर् दीपहार्यं  
+किमपि ध्वान्तमिव प्रकाशयन्तम् ॥
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+In its darkish brilliance it resembled the agaru paste that one might imagine on the person of Bhadrakāli whose advent marks the end of this universe.
+</details>
+
+
+
 120 
 प्रतिविम्बितदीपकान्तिमन्तः स्फुटतापिञ्छतरुप्रसूननीलम्।  
-नवमम्बुधरं विडम्बयन्तं जठरोज्जृम्भितवैद्युतप्रकाशम् ॥ तमरातिनराविनाथनारीनयनाम्भःकणपातहेतुभूतम्।  
-प्रभुरुन्मिपितस्वरोषवःरधिकोदामममंस्त धूमदण्डम् ॥
-___ (कलापकम् ।) प्रणयागतचोलपाण्ड्यलक्ष्मीश्रवणेन्दीवरमालिकायमानम्।  
-विरचव्य पुरः कृपाणमेषा पुनरप्याह पुरन्दराभमेनम् ॥ नरनाथ।  
-पुरा कृपाणमेनं विरच-याखिलदेवतायुधांशैः।  
-उपदीकृतवान् पिनाकपाणेर्दनुजानां विजयाय विश्वकर्मा ॥ अमुमुग्रतपःकुतप्रसादः प्रददौ पाण्ड्यनृपाय सोऽपि देवः।  
+नवमम्बुधरं विडम्बयन्तं जठरोज्जृम्भितवैद्युतप्रकाशम् ॥
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+With the images of burning lamps reflected in its surface, it looked like a fresh cloud bright with lightening within it.
+</details>
+
+
+
+तम् अराति-नराधिनाथ-नारी-  
+नयनाम्भः-कण-पात-हेतु-भूतम्।  
+प्रभुर् उन्मिषित-स्वरोष-वह्नेर्  
+अधिकोद्दामम् अमंस्त धूमदण्डम् ॥
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+This sword, efficacious in drawing tears of sorrow from the eyes of enemies' spouses...
+</details>
+
+
+___ (कलापकम् ।)  
+प्रणयागत-चोल-पाण्ड्य-लक्ष्मी-  
+श्रवणेन्दीवर-मालिकायमानम्।  
+विरचय्य पुरः कृपाणम् एषा  
+पुनर् अप्य् आह पुरन्दराभमेनम् ॥
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+she placed before the king, as if it were the personification of the Prosperity-God dess of Cõlas and Pāndyas and began to further address him thus :
+
+</details>
+
+
+
+नरनाथ पुरा कृपाणमेनं विरच-याखिलदेवतायुधांशैः।  
+उपदीकृतवान् पिनाकपाणेर्दनुजानां विजयाय विश्वकर्मा ॥
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+“Oh king, in olden times, this sword was made by Viswakarma with the melted splinters of all divine missiles, and he gave it as a present to God Śiva for the destruction of asuras.”
+
+</details>
+
+
+
+ अमुमुग्रतपःकुतप्रसादः प्रददौ पाण्ड्यनृपाय सोऽपि देवः।  
 यमुपेत्य चिराण तस्य वंश्याः पृथिवीमप्रतिशासनामशासन् ॥
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+"And that God gave it as a boon to the Pāndya king, pleased with his severe austerities. And his successors had it for a long time and were the unchallenged rulers of their earth.
+
+</details>
+
+
 अथ कालवशेन पाण्ड्यवंश्यान् गतवीर्यानवधार्य कुम्भजन्मा। मनुजेश्वर।  
-मण्डलाग्रमेनं भवते प्रेषितवान् महाभुजाय ॥ अमुना युधि दुःसहं महः स्यात् तव नैसर्गिकसाहसप्रवृत्तेः।  
-ध्रुवमूष्मणि दारुणो दवाग्निः किमुतोचण्डसमीरसंस्तवेन ॥ अधिसङ्गमस्य च प्रभावाद् भविता ते न कदापि सत्वसादः।  
-असितोमरचक्रचापमुख्यैषिदस्त्रैर्वपुषो न चाभिषङ्गः ॥ अमुमास्रकरालरश्मिपालीरचितालीकतटिच्छटाविलासम्।  
-धुवतस्तव चेष्टितु पुरस्तान्न कृतान्तोऽपि भवत्यलं किमन्यैः ॥ अमुनाशु विशस्य दक्षिणस्यां मधुरायां पुरि कंसवन्नृशंसम् ॥ यवनाधिपतिं बलोत्तरस्त्वं विदधीथाः स्फुटमच्युतावतारम् ॥
-MADHURÅVIJAY A M
-121
+मण्डलाग्रमेनं भवते प्रेषितवान् महाभुजाय ॥
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+"Sage Agastya, seeing that the Pāndya race has lost its old virility by the wearing influence of time, has new sent this scimitar to you, oh powerful king.”
+
+</details>
+
+
+
+ अमुना युधि दुःसहं महः स्यात् तव नैसर्गिकसाहसप्रवृत्तेः।  
+ध्रुवमूष्मणि दारुणो दवाग्निः किमुतोचण्डसमीरसंस्तवेन ॥
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+"You are by nature daring and wedded to risky enterprises. The possession of this weapon will make you formidable in battle. Forest fire is terrible enough, and if high winds also assist it, who can gauge its all-consuming ferocity?”.
+
+</details>
+
+
+
+ अधिसङ्गमस्य च प्रभावाद् भविता ते न कदापि सत्वसादः।  
+असितोमरचक्रचापमुख्यैषिदस्त्रैर्वपुषो न चाभिषङ्गः ॥
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+"By the wonderful virtue of being armed with this weapon you will never flag in the field of battle; nor would any harm result from enemy missiles such as sword, disc or bow."
+
+</details>
+
+
+
+ अमुमास्रकरालरश्मिपालीरचितालीकतटिच्छटाविलासम्।  
+धुवतस्तव चेष्टितु पुरस्तान्न कृतान्तोऽपि भवत्यलं किमन्यैः ॥
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+“As you wave this lightning-like sword in battie, not even the God of death can dare oppose you, let alone, others."
+
+</details>
+
+
+
+अमुनाशु विशस्य दक्षिणस्यां मधुरायां पुरि कंसवन्नृशंसम् ।
+यवनाधिपतिं बलोत्तरस्त्वं विदधीथाः स्फुटमच्युतावतारम् ॥
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+"Do you now proceed to Southern ivíadhura and destroy the cruel king of Yavanas who is the enemy of the world, even as Sri Krsna killed the demo nic Kamsa who once ruled there (viz., Northern Madhura)."
+
+</details>
+
+
+
 अनिदंप्रथमो हि धार्यतेऽसौ भवतान्यैर्मनसाप्यधारणीयः।  
-भुवनत्रयरक्षणैकदीक्षाविधिशंसी कठकः (पदाकरा)म्बुजेन ॥ चलवेणिभिरुल्वणारुणार्विपुलश्मश्रुभिरात्तसिंहनादैः।  
+भुवनत्रयरक्षणैकदीक्षाविधिशंसी कठकः (पदाकरा)म्बुजेन ॥
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+"Not for the first time will you now be wear ing this bracelet on your hand, which has been (even on prior occasions) the emblem of your vow of protect ing the three worlds, bracelet which none but you can wear.”
+
+</details>
+
+
+
+ चलवेणिभिरुल्वणारुणार्विपुलश्मश्रुभिरात्तसिंहनादैः।  
 विकटभृकुटीकरालफालैस्त्वरमाणस्तृणगात् (?)तुलुष्कशैषीः ॥
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+“Do you scatter the heads of Turuṣkas, heads with those swinging tufts, those blood-shot eyes, those ferocious beards and furious-browed foreheads."
+
+</details>
+
+
+
 ग्रसतु प्रथनाह्वये दिनादौ प्रथमानो भवतः प्रतापसूर्यः।  
-मधुपानमदप्रदोषरूढं यवनीनां म्मितचन्द्रिकाविकासम् ॥
+मधुपानमदप्रदोषरूढं यवनीनां स्मितचन्द्रिकाविकासम् ॥
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+“May the sun of your prowess in battle wipe off the smile of moon-light from the faces of the drunken Yavana ladies.”
+
+</details>
+
+
+
 अविनीतिदवानलानुबन्धादधिकोन्मीलदधर्मधर्मजातम्।  
 निहताहितलोहिताम्बुर्नृप।  
 निर्वापय तापमुर्वरायाः ॥
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+“Dharma is in great distress by being now subjected to the scorching influence of the evil-natured Yavanas, and earth in consequence looks parched, as it were; and so may you, by the rain of enemies' blood, allay the latter's susserings.”
+
+</details>
+
+
+
 परिपन्थिकबन्धकन्धरान्तःस्रुतरक्तासवपूरपारणाभिः।  
 कटपूतनभूतयातुधानानभितस्तर्पयतात् तवैष खड्गः ॥
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+“May this sword of yours feast the evil spirits such as katüs, pūtanus and yātudhānas with the blood flowing down from the headless trunks of your evil adversaries.”
+
+</details>
+
+
+
 दुरितैकपरं तुलुष्कनाथं द्रुतमुत्वाय जगत्त्यैकशल्यम्।  
-प्रतिरोपय रामसेतुमध्ये विचयस्तम्भशतानि बाहुशालिन्।  
-॥
+प्रतिरोपय रामसेतुमध्ये विचयस्तम्भशतानि बाहुशालिन्॥
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+"May you erect many a pillar of triumph in the middle of Rāmasētu by dealing destruction to the Turuṣka lord who is wedded to nothing but evil do ings and who therefore is to be regarded as the thorny shrub of the three worlds."
+
+</details>
+
+
+
 त्वयि नाथ।  
 नियन्तृतां प्रपन्ने धृतवेगा स्थिरसेतुबन्धनेन।  
-प्रथयत्वनुकूलयानलीलामचिरेणैव कवेरजाकरेणुः ॥ "
-[इति श्रीगङ्गादेव्या विरचिते मधुराविजय.
-नाम्नि वीरकम्परायचरिते
+प्रथयत्वनुकूलयानलीलामचिरेणैव कवेरजाकरेणुः ॥
+
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
+
+"The Kāvēri like a tamed female elephant will regain her normal course in the proper pace only if when you become supreme Governor, Oh Your Majesty".
+
+</details>
+
+
+
+इति श्रीगङ्गादेव्या विरचिते मधुराविजयनाम्नि वीरकम्परायचरिते
 अष्टमः सर्गः ।
-* इतः परं दश पत्राणि तालपत्रादशाद् विभ्रष्टानि ।
-122
 
-.............फलकेन केचित् प्रत्यर्थिनां वञ्चितबाणवर्षाः।  
-अलक्ष्यपातं युगपत् कृपाणैः कृत्ताखिलानींस्तुरगा......म् ॥ आसञ्जिताः कङ्कमुखैर्विमुच्य........ भुवनेषु पङ्क्तिः।  
-आराच्चरन्त्या विरराज मृत्योरुत्तम्भिता तोरणमालिकेव ॥
-कृत्ताः शशाङ्कार्यमुखैः पृषकैर्धनुष्मतां हास्तिकहस्तकाण्डाः।  
-रक्तहदेषु न्यपतन् भुजङ्गाः पारीक्षितस्येव मखानलेषु ॥ मुक्ताफलैीरकृपाणलेखाविभिन्नगन्धद्विपकुम्भमुक्तैः।  
-रक्तारुणैस्तत्क्षणघट्टनोत्थस्फुलिङ्गसङ्घातमतिर्वितेने ॥ यावत् कृपाणेन विपाट्य कुम्भं निवर्तते सत्वरमश्ववारः।  
-तावद् गृहीत्वास्य तुरङ्गमञयोरास्फालयामास गजस्तमुाम् ॥ निशाचराः केचन कुञ्जराणां कुस्मस्थलान्निस्सृतमास्रपूरम्।  
-निष्ठयूतमुक्तामणयः सहर्ष चुचूषुरुत्पुष्करनालदण्डैः ॥ जिवत्सयान्तः पतगैः प्रविष्टैः प्रस्पन्दमानं कुणपं द्विपस्य।  
-समीपमासाद्य सजीवबुद्धया व्यसुं सतृप्णोऽपि जहो सृगालः ॥ चक्रनिकृत्तानि शिरांसि यावदाधोरणानां न पतन्त्यधस्तात्।  
-अक्लिष्टशौभान्यवतसहेतोस्तावत् प्रतीष्टानि निशाचरीभिः ॥ करेण कञ्चित् पदयोर्गृहीत्वा क्षिप्तं दवीयो वियति द्विपेन्द्रः।  
-पतन्तमाच्छिन्नकृपाणयष्टिः प्रत्यैच्छदुच्चेर्दशनद्वयेन ॥ क्षिप्तो गजेनोर्ध्वमसिद्वितीयः स्कन्धे निपत्यास्य पुरस्तरस्वी।  
-निपात्य चाधोरणमभ्यमित्रं गजाधिरोहः स्वयमेव जज्ञे ॥
-- इतः पूर्वं शताधिकश्लोकविच्छेदसंभावनया सर्गसङ्ख्या न निश्चेतुं शक्या।
-123
-द्विषा सरोषेण पृषकवर्षेनिषूदितः कोऽप्यमरत्वमेत्य।  
-चकार तस्योपरि पुष्पवर्षे सहर्षमुद्घोषितचाटुवादः ॥ कुन्तेन कश्चित् द्विषता विभिन्नस्तथैव संश्लेषममुष्य यातः।  
-भिन्दन्नुरस्तेन चमत्कृतोऽभूद् गुणेषु को मत्सरमादधाति ॥ चिराय कौचित् कलहायमानावन्योन्यकौक्षेयककृत्तशो!।  
-विमुक्तदेहौ तदनुक्षणेन ससौहृदौ दिव्यपुरीमयाताम् ॥ सङ्ग्रामवन्यामभितश्चरन्नो दोद्धताः केचन राजसिंहाः।  
-प्रत्यर्थिनां पार्थिवकुञ्जराणां शिरांस्यभिन्दन्नखरैः खराङ्गः ॥]
-.....स्तस्य विरोधियोधान् दृष्ट्वा जहासेव पलायमानान् ॥
-एकप्रहारेण सकङ्कटानामाधोरणानां करिणां च देहैः।  
-द्विधा विभिन्नैरभितो विवेत्तुमीषत्करास्तस्य विमर्दमार्गाः ॥
-कुम्भेषु भिन्दन् नृपतिर्द्विपेन्द्रान् मुक्ताफलैः शर्करिलान्तराभिः।  
-प्रावर्तयद् रक्ततरङ्गिणीभिः परश्शताः संयति ताम्रपर्णीः ॥
-तेन द्विपास्तोमरिणा विभिन्नाः कुंभस्थलैरुज्झितमोक्तिकौघैः।  
-कौञ्चस्य जह्वर्गुहशक्तिघातप्रकीर्णहंसप्रकरस्य शोभाम् ॥
-रंहस्विनः स्वाभिमुखान् क्षितीन्द्रो मृगान् नखाग्रेण यथा तरक्षुः ।
-प्रसह्य वक्षस्सु युधि प्रवीरान् क्षुण्णानकार्षीच्छुरिकामुखेन ॥
-शूरस्तथा प्राहृत मुद्गारेण शिरस्त्रवन्ति द्विषतां शिरांसि।  
-यथा विनिर्यन्नयनानि तानि मञ्जु न्यमाक्षुः स्वशरीर एव ॥
-124
-तस्मिन्निति व्यापृतहेतिजाते परापतन्त्यः परिपन्थिसेनाः।  
-कल्पक्षयोदचिपि हव्यवाहे महाम्बुधेराप इवाशु ने[शुः ] ॥ न जामदग्येन न राघवेण तथा न भीमेन न चार्जुनेन।  
-आपादितस्तेन यथा समीके हर्षों महर्षेः कलहप्रियस्य ॥
-ततस्तुलुष्कान युधि [कान्दिशी कानालोक्य विष्फारितघोरशाः।  
-कम्पक्षितीन्द्रं यवनाधिराजः प्रत्यग्रहीद वृत्र इवामरेन्द्रम् ॥ में वीरपाणाधिकपाटलाक्ष ललाटलक्ष्यभृकुटीकरलम्।  
-मदस्य रोषस्य च देहबन्ध संभेदमाशङ्कत वीरवर्गः ॥
-निरायता तस्य तुरङ्गवेगा वेणिर्मणिश्रेणिमती चक्राशे।  
-अमर्षवढेज्वलनोन्मुखस्य धूमच्छटेव स्फुरितस्फुलिङ्गा ॥ आम्फाल्यमानस्य च तेन गाढं शास्यि मौ/निदश्चकार।  
-चिरात् परित्यज्य पमुच्चलल्या जयश्रियो जुपुरघोषशङ्काम् !! पराक्रमाधःकृतचोलपाण्डधं वल्लालसम्पल्लतिकाकुठारम्।  
-रणोन्मुखं कम्पनृपोऽभ्यनन्दीद् वीरः सुरत्राणमुदग्रशौर्यः ॥ आकर्णमाकृष्टशरासनौ तौ मिथः किरन्तौ विशिखानसङ्ख्यान्।  
-वीरौ स्वबाहुद्रविणानुरूपमायोधनं मानघनौ व्यघाताम् ॥ बाणा निरस्ता यवनेन तस्मिन्नपाङ्गपाता इव वीरलक्ष्म्याः।  
-कम्पेश्वरेणाप्यभिपारसीकं शराः कटाक्षा इव कालरात्रेः ॥
-स केरलप्राणमरुद्भुजङ्गान् वन्यावनीन्द्रद्रुमदाववहीन् ।
-अन्ध्रान्धकारक्षयतिग्मभासो बाणानमुञ्चद् यवने नरेन्द्रः ॥
-इतः परं पत्रद्वयं निर्लेखं दृश्यते ।
+<details><summary>tiruvenkaTAchAri (Eng)</summary>
 
-125
-क्षतानि यान्यस्य शरैः शरीरे चकार वीरस्य तुलुष्कवीरः।  
-वितेनिरे तानि नखाङ्कशङ्कां जयश्रियो भोगसमुत्सुकायाः ॥ उदग्रमग्रे यवनाधिभर्तुः साक्षात्कलेर्मोलिमिवाशुगेन।  
-स मञ्जु साघु जयकाङ्कितेन ध्वाङ्क्षध्वजं ध्वंसयति स्म धन्वी ॥ अमर्पितस्याथ पृषत्कवर्ष विमुञ्चतो विद्विषतः शरेण।  
-स कार्मुकज्यामलुनात् तुलुष्कराज्यश्रियो मङ्गलसूत्रकल्पाम् ॥ विहाय शार्ङ्ग धनुरिद्वरोषस्तुलुक चीरस्त*]रवारिमुग्रम्।  
-तुरङ्गपर्याणनिबद्धवर्धाविलम्बि(भिःन) सत्वरमुजाहार ॥ अथाग्रहीत् कम्पनृपस्तमेव कौशेयकं काल[करालरूपम्।  
-व्या*]पादनार्थं यवनेश्वरस्य यः प्रेषितः प्राक् कलशोद्भवेन ॥ विषच्छटाधूम्ररुचिर्नृपस्य करामधूता करवाललेखा।  
-जिह्वेव रेजे ]यवनाधिराजप्राणानिलाञ् जिग्रसिषोर्भुजाहेः ॥ स वञ्चयंस्तत्तरवारिधारां धाराविशेषप्रवणौपवाह्यः।  
-अशातयत्तस्य शिरो निमेषा[दने"]न कर्णाटकुलपदीपः ॥ अज्ञातसेवोचितचाटुवाद तुलुष्कसाम्राज्यकृताभिषेकम्।  
-दिवौकसामप्यकृतप्रणाम भूमौ सुरत्राणशिरः पपात ॥ च्युतेऽपि शीर्ष चलिताश्ववल्गानियन्त्रणव्यापृतवामपाणिम्।  
-प्रतिप्रहारप्रसृतान्यहस्तं वीरः कबन्धं द्विषतोऽभ्यनन्दीत् ॥ मानोन्नते कम्पनृपस्य मौलौ पपात दिव्यद्रुमपुष्पवृष्टिः।  
-स्वयंवराभ्युत्सुकराजलक्ष्मीविमुक्तमुक्ताक्षतजालकल्पा ॥
-' इयानेव तालपत्रादर्श ः समुपलब्धः ।
-126
-M ADHUR Á VIJAY AM
-प्रशान्तदावेव वनान्तलक्ष्मीगतोपरागा गगनस्थलीव।  
-कलिन्दजा मर्दितकालियेव दिग् दक्षिणासीत् क्षतपारसीका ॥
-हताबशिष्टानथ वैरियोधान् संरक्ष्य पादपण ........ ।
-.......... ||
-[इति श्रीगङ्गादेव्या विरचितं मधुराविजय
-नाम वीरकम्परायचरित
-समातम्। शिवं भूयात् ।
+Thus ends the eighth canto of Virakamparāya çaritam, called Madhurāvijayam, composed by Gangā Dēvi.
+
+</details>
+
+
+
